Add CyanHacker version to all languages

--- a/res/values-ca/liquid_strings.xml
+++ b/res/values-ca/liquid_strings.xml
@@ -30,7 +30,7 @@
   <string name="thursday">Dijous</string>
   <string name="friday">Divendres</string>
   <string name="saturday">Dissabte</string>
-  <string name="mod_version">Versió LiquidSmooth</string>
+  <string name="mod_version">Versió CyanHacker</string>
   <string name="mod_version_default">Desconegut</string>
   <string name="build_date">Data de compilació</string>
   <string name="build_date_default">2012-01-01-0000</string>
