--- a/res/values-cs/liquid_strings.xml
+++ b/res/values-cs/liquid_strings.xml
@@ -30,7 +30,7 @@
   <string name="thursday">Čtvrtek</string>
   <string name="friday">Pátek</string>
   <string name="saturday">Sobota</string>
-  <string name="mod_version">Verze LiquidSmooth</string>
+  <string name="mod_version">Verze CyanHacker</string>
   <string name="mod_version_default">Neznámý</string>
   <string name="build_date">Datum sestavení</string>
   <string name="build_date_default">2012-01-01-0000</string>
