--- a/res/values-es/liquid_strings.xml
+++ b/res/values-es/liquid_strings.xml
@@ -30,7 +30,7 @@
   <string name="thursday">Jueves</string>
   <string name="friday">Viernes</string>
   <string name="saturday">Sábado</string>
-  <string name="mod_version">Versión de LiquidSmooth</string>
+  <string name="mod_version">Versión de CyanHacker</string>
   <string name="mod_version_default">Desconocido</string>
   <string name="build_date">Fecha de compilación</string>
   <string name="build_date_default">2012-01-01-0000</string>
