--- a/res/values-fa/liquid_strings.xml
+++ b/res/values-fa/liquid_strings.xml
@@ -23,7 +23,7 @@
   <string name="attention">Attention</string>
   <string name="default_string">Default</string>
   <string name="reset_message">Reset entries to default?</string>
-  <string name="mod_version">LiquidSmooth version</string>
+  <string name="mod_version">CyanHacker version</string>
   <string name="mod_version_default">Unknown</string>
   <string name="build_date">Build date</string>
   <string name="build_date_default">2012-01-01-0000</string>
