--- a/res/values-fi/liquid_strings.xml
+++ b/res/values-fi/liquid_strings.xml
@@ -30,7 +30,7 @@
   <string name="thursday">Torstai</string>
   <string name="friday">Perjantai</string>
   <string name="saturday">Lauantai</string>
-  <string name="mod_version">LiquidSmooth-versio</string>
+  <string name="mod_version">CyanHacker-versio</string>
   <string name="mod_version_default">Tuntematon</string>
   <string name="build_date">Luontipäivä</string>
   <string name="build_date_default">2012-01-01-0000</string>
