--- a/res/values-fr/liquid_strings.xml
+++ b/res/values-fr/liquid_strings.xml
@@ -30,7 +30,7 @@
   <string name="thursday">Jeudi</string>
   <string name="friday">Vendredi</string>
   <string name="saturday">Samedi</string>
-  <string name="mod_version">Version LiquidSmooth</string>
+  <string name="mod_version">Version CyanHacker</string>
   <string name="mod_version_default">Inconnu</string>
   <string name="build_date">Date de compilation</string>
   <string name="build_date_default">2012-01-01-0000</string>
