--- a/res/values-hu/liquid_strings.xml
+++ b/res/values-hu/liquid_strings.xml
@@ -30,7 +30,7 @@
   <string name="thursday">Csütörtök</string>
   <string name="friday">Péntek</string>
   <string name="saturday">Szombat</string>
-  <string name="mod_version">LiquidSmooth verzió</string>
+  <string name="mod_version">CyanHacker verzió</string>
   <string name="mod_version_default">Ismeretlen</string>
   <string name="build_date">Készítés dátuma</string>
   <string name="build_date_default">2012-01-01-0000</string>
