--- a/res/values-it/liquid_strings.xml
+++ b/res/values-it/liquid_strings.xml
@@ -30,7 +30,7 @@
   <string name="thursday">Giovedì</string>
   <string name="friday">Venerdì</string>
   <string name="saturday">Sabato</string>
-  <string name="mod_version">Versione LiquidSmooth</string>
+  <string name="mod_version">Versione CyanHacker</string>
   <string name="mod_version_default">Sconosciuto</string>
   <string name="build_date">Data di creazione della build</string>
   <string name="build_date_default">2012-01-01-0000</string>
