--- a/res/values-ko/liquid_strings.xml
+++ b/res/values-ko/liquid_strings.xml
@@ -30,7 +30,7 @@
   <string name="thursday">목요일</string>
   <string name="friday">금요일</string>
   <string name="saturday">토요일</string>
-  <string name="mod_version">LiquidSmooth 버전</string>
+  <string name="mod_version">CyanHacker 버전</string>
   <string name="mod_version_default">알 수 없음</string>
   <string name="build_date">빌드 날짜</string>
   <string name="build_date_default">2012-01-01-0000</string>
