--- a/res/values-nl/liquid_strings.xml
+++ b/res/values-nl/liquid_strings.xml
@@ -30,7 +30,7 @@
   <string name="thursday">Thursday</string>
   <string name="friday">Friday</string>
   <string name="saturday">Saturday</string>
-  <string name="mod_version">LiquidSmooth versie</string>
+  <string name="mod_version">CyanHacker versie</string>
   <string name="mod_version_default">Onbekend</string>
   <string name="build_date">Build datum</string>
   <string name="build_date_default">2012-01-01-0000</string>
