--- a/res/values-pt-rBR/liquid_strings.xml
+++ b/res/values-pt-rBR/liquid_strings.xml
@@ -30,7 +30,7 @@
   <string name="thursday">Quinta-Feira</string>
   <string name="friday">Sexta-Feira</string>
   <string name="saturday">Sabado</string>
-  <string name="mod_version">Versão LiquidSmooth</string>
+  <string name="mod_version">Versão CyanHacker</string>
   <string name="mod_version_default">Desconhecido</string>
   <string name="build_date">Data da compilação</string>
   <string name="build_date_default">2012-01-01-0000</string>
