--- a/res/values-pt-rPT/liquid_strings.xml
+++ b/res/values-pt-rPT/liquid_strings.xml
@@ -30,7 +30,7 @@
   <string name="thursday">Quinta-feira</string>
   <string name="friday">Sexta-feira</string>
   <string name="saturday">Sábado</string>
-  <string name="mod_version">LiquidSmooth versão </string>
+  <string name="mod_version">CyanHacker versão </string>
   <string name="mod_version_default">Desconhecido</string>
   <string name="build_date">Data de versão</string>
   <string name="build_date_default">2012-01-01-0000</string>
