--- a/res/values-ru/liquid_strings.xml
+++ b/res/values-ru/liquid_strings.xml
@@ -30,7 +30,7 @@
   <string name="thursday">Четверг</string>
   <string name="friday">Пятница</string>
   <string name="saturday">Суббота</string>
-  <string name="mod_version">Версия LiquidSmooth</string>
+  <string name="mod_version">Версия CyanHacker</string>
   <string name="mod_version_default">Неизвестно</string>
   <string name="build_date">Дата сборки</string>
   <string name="build_date_default">01-01-2012-0000</string>
