--- a/res/values-tr/liquid_strings.xml
+++ b/res/values-tr/liquid_strings.xml
@@ -30,7 +30,7 @@
   <string name="thursday">Perşembe</string>
   <string name="friday">Cuma</string>
   <string name="saturday">Cumartesi</string>
-  <string name="mod_version">LiquidSmooth sürümü</string>
+  <string name="mod_version">CyanHacker sürümü</string>
   <string name="mod_version_default">Bilinmeyen</string>
   <string name="build_date">Sürüm tarihi</string>
   <string name="build_date_default">01-01-2012-0000</string>
