--- a/res/values-uk/liquid_strings.xml
+++ b/res/values-uk/liquid_strings.xml
@@ -30,7 +30,7 @@
   <string name="thursday">Четвер</string>
   <string name="friday">П\'ятниця</string>
   <string name="saturday">Субота</string>
-  <string name="mod_version">Версія LiquidSmooth</string>
+  <string name="mod_version">Версія CyanHacker</string>
   <string name="mod_version_default">Невідомий</string>
   <string name="build_date">Дата збірки</string>
   <string name="build_date_default">2012-01-01-0000</string>
