--- a/res/values-vi/liquid_strings.xml
+++ b/res/values-vi/liquid_strings.xml
@@ -30,7 +30,7 @@
   <string name="thursday">Thứ năm</string>
   <string name="friday">Thứ Sáu</string>
   <string name="saturday">Thứ Bảy</string>
-  <string name="mod_version">Phiên bản LiquidSmooth</string>
+  <string name="mod_version">Phiên bản CyanHacker</string>
   <string name="mod_version_default">Không rõ</string>
   <string name="build_date">Ngày build</string>
   <string name="build_date_default">2012-01-01-0000</string>
