--- a/res/values-el/liquid_strings.xml
+++ b/res/values-el/liquid_strings.xml
@@ -30,7 +30,7 @@
   <string name="thursday">Πέμπτη</string>
   <string name="friday">Παρασκευή</string>
   <string name="saturday">Σάββατο</string>
-  <string name="mod_version">Έκδοση LiquidSmooth</string>
+  <string name="mod_version">Έκδοση CyanHacker</string>
   <string name="mod_version_default">Άγνωστη</string>
   <string name="build_date">Ημερομηνία έκδοσης</string>
   <string name="build_date_default">2012-01-01-0000</string>
