--- a/res/values-iw/liquid_strings.xml
+++ b/res/values-iw/liquid_strings.xml
@@ -30,7 +30,7 @@
   <string name="thursday">Thursday</string>
   <string name="friday">Friday</string>
   <string name="saturday">Saturday</string>
-  <string name="mod_version">גירסת LiquidSmooth</string>
+  <string name="mod_version">גירסת CyanHacker</string>
   <string name="mod_version_default">לא ידוע</string>
   <string name="build_date">Build date</string>
   <string name="build_date_default">2012-01-01-0000</string>
