--- a/res/values-ja/liquid_strings.xml
+++ b/res/values-ja/liquid_strings.xml
@@ -30,7 +30,7 @@
   <string name="thursday">Thursday</string>
   <string name="friday">Friday</string>
   <string name="saturday">Saturday</string>
-  <string name="mod_version">LiquidSmooth version</string>
+  <string name="mod_version">CyanHacker version</string>
   <string name="mod_version_default">Unknown</string>
   <string name="build_date">Build date</string>
   <string name="build_date_default">2012-01-01-0000</string>
