--- a/res/values-pl/liquid_strings.xml
+++ b/res/values-pl/liquid_strings.xml
@@ -30,7 +30,7 @@
   <string name="thursday">Czwartek</string>
   <string name="friday">Piątek</string>
   <string name="saturday">Sobota</string>
-  <string name="mod_version">Wersja LiquidSmooth</string>
+  <string name="mod_version">Wersja CyanHacker</string>
   <string name="mod_version_default">Nieznany</string>
   <string name="build_date">Data kompilacji</string>
   <string name="build_date_default">2012-01-01-0000</string>
