--- a/res/values-ro/liquid_strings.xml
+++ b/res/values-ro/liquid_strings.xml
@@ -30,7 +30,7 @@
   <string name="thursday">Thursday</string>
   <string name="friday">Friday</string>
   <string name="saturday">Saturday</string>
-  <string name="mod_version">Versiune LiquidSmooth</string>
+  <string name="mod_version">Versiune CyanHacker</string>
   <string name="mod_version_default">Necunoscut</string>
   <string name="build_date">Dată build</string>
   <string name="build_date_default">01-01-2012-0000</string>
