--- a/res/values-zh-rHK/liquid_strings.xml
+++ b/res/values-zh-rHK/liquid_strings.xml
@@ -30,7 +30,7 @@
   <string name="thursday">星期四</string>
   <string name="friday">星期五</string>
   <string name="saturday">星期六</string>
-  <string name="mod_version">LiquidSmooth 版本</string>
+  <string name="mod_version">CyanHacker 版本</string>
   <string name="mod_version_default">不明</string>
   <string name="build_date">編譯日期</string>
   <string name="build_date_default">2012-01-01-0000</string>
