--- a/res/values/liquid_strings.xml
+++ b/res/values/liquid_strings.xml
@@ -2346,7 +2346,7 @@ two in order to insert additional control points. \'Remove\' deletes the selecte
     <string name="pulldown_summary">Multitasking</string> 
 	<string name="animation_settings_title">Animation settings</string> 
 	<string name="slimrecentscatergory">Slim recents</string> 
-	<string name="omnirecentscatergory">Omni recents/string> 
+	<string name="omnirecentscatergory">Omni recents</string> 
 	<string name="aosprecentscatergory">AOSP recents</string> 	
     <string name="cyanhacker_title">CyanHacker</string>	
     <string name="mod_version">CyanHacker version</string>
