Always the same :p

--- a/res/xml/liquid_main_settings.xml
+++ b/res/xml/liquid_main_settings.xml
@@ -102,7 +102,7 @@
         android:key="devicesettings_app"
         android:title="@string/device_settings_title"
         android:summary="@string/devicesettings_app_summary"
-		android:icon="@drawable/ic_device>
+		android:icon="@drawable/ic_device">
         <intent
             android:action="com.cyanogenmod.action.LAUNCH_DEVICE_SETTINGS"
             android:targetPackage="com.cyanogenmod.settings.device"
