--- a/res/xml/liquid_main_settings.xml
+++ b/res/xml/liquid_main_settings.xml
@@ -98,7 +98,7 @@
         android:summary="@string/advanced_batterysaver_summary"
         android:icon="@drawable/ic_batterysaver"/>
 		
-    <PreferenceScreen
+    <Preference
         android:key="devicesettings_app"
         android:title="@string/device_settings_title"
         android:summary="@string/devicesettings_app_summary"
@@ -107,6 +107,7 @@
             android:action="com.cyanogenmod.action.LAUNCH_DEVICE_SETTINGS"
             android:targetPackage="com.cyanogenmod.settings.device"
             android:targetClass="com.cyanogenmod.settings.device.DeviceSettings" />
+	</Preference>	
 
     <PreferenceScreen
         android:title="@string/superuser_settings_title"
