--- a/res/values/liquid_strings.xml
+++ b/res/values/liquid_strings.xml
@@ -928,7 +928,7 @@ two in order to insert additional control points. \'Remove\' deletes the selecte
     <string name="less_notification_sounds_5m">5 minutes</string>
 
     <!-- Quick Settings -->
-    <string name="quick_settings_title">Quick settings</string>
+    <string name="quick_settings_title">Pulldown settings</string>
     <string name="tile_picker_title">Tiles and layout</string>
     <string name="tile_picker_summary">View, select or change the displayed tiles</string>
     <string name="tile_choose_title">Choose a tile</string>
