--- a/res/values/liquid_strings.xml
+++ b/res/values/liquid_strings.xml
@@ -2350,6 +2350,7 @@ two in order to insert additional control points. \'Remove\' deletes the selecte
 	<string name="aosprecentscatergory">AOSP recents</string> 	
     <string name="cyanhacker_title">CyanHacker</string>	
     <string name="mod_version">CyanHacker version</string>
+	<string name="nav_bar_title">Navigation bar</string>
 	
     <!-- Screen Color Settings -->
     <string name="display_color_title">Screen color</string>
